--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,38 @@
     transform: rotate(360deg);
   }
 }
+button{
+  background-color:blue
+}
+.left{
+  width:65%;
+  height:100%;
+  float:left;
+ 
+}
+.right{
+  width:30%;
+  height:100%;
+  float:right;
+ 
+}
+.top{
+  width:100%;
+  height:50%;
+  float:top;
+}
+.bottom{
+  width:100%;
+  height:50%;
+  float:top;
+  
+}
+.center{
+  width:15%;
+  height: 20%;
+  margin-left:35%;
+}
+.img{
+  width:250px;
+  height:250px;
+}
