Create TodaysDate And Defaults Table

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .App {
   text-align: center;
+  margin-left: 70%;
 }
-
+h1{
+  margin-top:8%;
+  
+}
+table{
+  margin-right: 10%;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
