--- a/src/App.css
+++ b/src/App.css
@@ -41,13 +41,14 @@ button{
 }
 .left{
   width:65%;
-  height:100%;
+  height:80%;
+ 
   float:left;
  
 }
 .right{
   width:30%;
-  height:100%;
+  height:80%;
   float:right;
  
 }
@@ -55,11 +56,19 @@ button{
   width:100%;
   height:50%;
   float:top;
+  margin-top:3%;
+  margin-left:5%;
+  color:rgb(232,179,140);
+  background-color:rgb(225, 240, 249);
 }
 .bottom{
   width:100%;
   height:50%;
   float:top;
+  margin-left:5%;
+  margin-top:3%;
+  background-color:rgb(231, 50, 132);
+  color:white;
   
 }
 .center{
@@ -70,4 +79,14 @@ button{
 .img{
   width:250px;
   height:250px;
+}
+
+.foot{
+  width:100%;
+  float:left;
+  margin-top:2%;
+  
+  color:white;
+  background-color:rgb(34, 29, 29);
+  text-align: center;
 }
