--- a/src/App.css
+++ b/src/App.css
@@ -36,9 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
 button{
   background-color:blue
 }
+
 .left{
   width:65%;
   height:80%;
@@ -52,6 +54,7 @@ button{
   float:right;
  
 }
+
 .top{
   width:100%;
   height:50%;
@@ -61,6 +64,7 @@ button{
   color:white;
   background-color:rgb(18, 160, 196);
 }
+
 .bottom{
   width:100%;
   height:50%;
@@ -69,13 +73,14 @@ button{
   margin-top:3%;
   background-color:rgb(18, 160, 196);
   color:white;
-  
 }
+
 .center{
   width:15%;
   height: 20%;
   margin-left:35%;
 }
+
 .img{
   width:250px;
   height:250px;
@@ -106,4 +111,14 @@ button{
   font-family: 'Times New Roman', Times, serif;
   color:white;
   font-size:20px;
+}
+
+.footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+  text-align: center;
 }
