--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,245 @@
     transform: rotate(360deg);
   }
 }
+button{
+  background-color:blue
+}
+.left{
+  width:65%;
+  height:80%;
+ 
+  float:left;
+ 
+}
+.right{
+  width:30%;
+  height:80%;
+  float:right;
+ 
+}
+.top{
+  width:100%;
+  height:50%;
+  float:top;
+  margin-top:3%;
+  margin-left:5%;
+  color:white;
+  background-color:rgb(67,127,199);
+}
+.bottom{
+  width:100%;
+  height:50%;
+  float:top;
+  margin-left:5%;
+  margin-top:3%;
+  background-color:rgb(67,127,199);
+  color:white;
+  
+}
+.center{
+  width:15%;
+  height: 20%;
+  margin-left:35%;
+}
+.img{
+ border-radius: 35%;
+ margin-top:-5%;
+ width:110px;
+}
+
+.foot{
+ position: fixed;
+ left: 0;
+ bottom:0;
+ width:100%;
+ background-color: black;
+ color:white;
+ text-align: center;
+}
+
+.yodafy{
+  width:50px;
+  border-radius: 25px;
+}
+
+.nav-item{
+  font-size:20px;
+  font-family: 'Times New Roman', Times, serif;
+}
+.navbar-brand{
+  color:white;
+  font-size:25px;
+  font-family:'Times New Roman', Times, serif;
+}
+
+
+
+
+.about{
+	cursor: pointer;
+	background-color: #6B062D;
+	color: #FFFFFF;
+	padding-top: 20px;
+	padding-bottom: 30px;
+}
+.about h1 {
+	padding: 10px 0;
+	margin-bottom: 20px;
+}
+.about h2 {
+	opacity: .8;
+}
+.about span {
+	display: block;
+	width: 100px;
+	height: 100px;
+	line-height: 100px;
+	margin:auto;
+	border-radius:50%;  
+	font-size: 40px;
+	color: #FFFFFF;
+	opacity: 0.7;
+	background-color: #4C0822;
+	border: 2px solid #4C0822;
+
+	webkit-transition:all .5s ease;
+ 	moz-transition:all .5s ease;
+ 	os-transition:all .5s ease;
+ 	transition:all .5s ease;
+
+}
+.about-item:hover span{
+	opacity: 1;	
+	border: 2px solid #CC0039;
+	font-size: 42px;
+	-webkit-transform: scale(1.1,1.1) rotate(360deg) ;
+	-moz-transform: scale(1.1,1.1) rotate(360deg) ;
+	-o-transform: scale(1.1,1.1) rotate(360deg) ;
+	transform: scale(1.1,1.1) rotate(360deg) ;
+}
+.about-item:hover h2{
+	opacity: 1;
+	-webkit-transform: scale(1.1,1.1)  ;
+	-moz-transform: scale(1.1,1.1)  ;
+	-o-transform: scale(1.1,1.1)  ;
+	transform: scale(1.1,1.1) ;
+}
+.about .lead{
+	color: orangered;
+	font-size: 14px;
+	font-weight: bold;
+}
+.container{
+  margin-left:35%;
+}
+
+
+/* contact css*/
+
+
+
+
+
+   
+.box{
+   
+  width:70%;
+ 
+  padding: 40px;
+ 
+  position: absolute;
+ 
+  top: 50%;
+ 
+  left: 50%;
+ 
+  transform: translate(-50%,-50%);
+ 
+  background: #a74b4b;
+ 
+  text-align: center;
+ 
+ }
+ 
+ h1{
+     text-align: center;
+    
+ }
+ 
+ .box input[type = "text"], .box input[type = "password"]{
+ 
+  border: 0;
+ 
+  background: none;
+ 
+  display: block;
+ 
+  margin: 20px auto;
+ 
+  text-align: center;
+ 
+  border: 2px solid #3498db;
+ 
+  padding: 14px 10px;
+ 
+  width: 200px;
+ 
+  outline: none;
+ 
+  color: white;
+ 
+  border-radius: 24px;
+ 
+  transition: 0.25s;
+ 
+ }
+ 
+ .box input[type = "text"]:focus,.box input[type = "password"]:focus{
+ 
+  width: 280px;
+ 
+  border-color: #2ecc71;
+ 
+ }
+ 
+ 
+ 
+ .box input[type = "submit"]
+ 
+ {
+ 
+   border: 0;
+ 
+  background: none;
+ 
+  display: block;
+ 
+  margin: 20px auto;
+ 
+  text-align: center;
+ 
+  border: 2px solid #2ecc71;
+ 
+  padding: 14px 40px;
+ 
+  outline: none;
+ 
+  color: white;
+ 
+  border-radius: 24px;
+ 
+  transition: 0.25s;
+ 
+  cursor: pointer;
+ 
+ }
+ 
+ 
+ 
+ .box input[type = "submit"]:hover
+ 
+ {
+ 
+  background: #2ecc71;
+ 
+ }
