--- a/src/App.css
+++ b/src/App.css
@@ -50,13 +50,15 @@ button{
   width:30%;
   height:80%;
   float:right;
+  margin-top: 3%;
+  margin-right:1%;
  
 }
 .top{
   width:100%;
   height:50%;
   float:top;
-  margin-top:3%;
+  margin-top:7%;
   margin-left:5%;
   color:white;
   background-color:rgb(67,127,199);
@@ -66,7 +68,7 @@ button{
   height:50%;
   float:top;
   margin-left:5%;
-  margin-top:3%;
+  margin-top:5%;
   background-color:rgb(67,127,199);
   color:white;
   
