--- a/src/App.css
+++ b/src/App.css
@@ -110,14 +110,15 @@ button{
 }
 
 
-
+/* About.css */
 
 .about{
 	cursor: pointer;
 	background-color: #6B062D;
 	color: #FFFFFF;
 	padding-top: 20px;
-	padding-bottom: 30px;
+	padding-bottom: 100px;
+  width: 100vw;
 }
 .about h1 {
 	padding: 10px 0;
@@ -130,24 +131,20 @@ button{
 	display: block;
 	width: 100px;
 	height: 100px;
-	line-height: 100px;
 	margin:auto;
 	border-radius:50%;  
 	font-size: 40px;
 	color: #FFFFFF;
 	opacity: 0.7;
-	background-color: #4C0822;
-	border: 2px solid #4C0822;
 
-	webkit-transition:all .5s ease;
- 	moz-transition:all .5s ease;
- 	os-transition:all .5s ease;
+	-webkit-transition:all .5s ease;
+ 	-moz-transition:all .5s ease;
+ 	-o-transition:all .5s ease;
  	transition:all .5s ease;
 
 }
 .about-item:hover span{
-	opacity: 1;	
-	border: 2px solid #CC0039;
+	opacity: 2;
 	font-size: 42px;
 	-webkit-transform: scale(1.1,1.1) rotate(360deg) ;
 	-moz-transform: scale(1.1,1.1) rotate(360deg) ;
@@ -155,14 +152,14 @@ button{
 	transform: scale(1.1,1.1) rotate(360deg) ;
 }
 .about-item:hover h2{
-	opacity: 1;
+	opacity: 2;
 	-webkit-transform: scale(1.1,1.1)  ;
 	-moz-transform: scale(1.1,1.1)  ;
 	-o-transform: scale(1.1,1.1)  ;
 	transform: scale(1.1,1.1) ;
 }
 .about .lead{
-	color: orangered;
+	color: rgb(233, 130, 102);
 	font-size: 14px;
 	font-weight: bold;
 }
@@ -170,7 +167,15 @@ button{
   margin-left:35%;
 }
 
-
+.img{
+  border-radius:100%;
+}
+.image-data{
+  margin-top: 5% ;
+}
+.lead{
+  text-align:left;
+}
 /* contact css*/
 
 
